# poa-bench

./: .gitignore  Cargo.toml  README.md
data/amphora_genes/dnaG/set1/: meta.toml
data/amphora_genes/dnaG/set2/: meta.toml
data/amphora_genes/dnaG/set3/: meta.toml
data/amphora_genes/dnaG/set4/: meta.toml
data/amphora_genes/dnaG/set5/: meta.toml
data/amphora_genes/dnaG/set6/: meta.toml
data/amphora_genes/dnaG/set7/: meta.toml
data/amphora_genes/nusA/set1/: meta.toml
data/amphora_genes/nusA/set2/: meta.toml
data/amphora_genes/nusA/set3/: meta.toml
data/amphora_genes/pgk/set1/: meta.toml
data/amphora_genes/pyrG/set1/: meta.toml
data/amphora_genes/pyrG/set2/: meta.toml
data/amphora_genes/rpoB/set1/: meta.toml
data/amphora_genes/rpoB/set2/: meta.toml
data/amphora_genes/rpoB/set3/: meta.toml
data/mtb/benchmark/0_250kbp_trmB/: meta.toml
data/mtb/benchmark/1_500kbp_thiE/: meta.toml
data/mtb/benchmark/2_1Mbp_gltA2/: meta.toml
poa-bench-tools/: make_synthetic_datasets.py
python/: pyproject.toml
python/poa_bench_tools/: __main__.py  create_mutated_sequences.py  extract_genes.py  make_gene_dataset.py  make_synthetic_datasets.py  msa_stats.py  poasta_extract_genes.py  sort_by_guide_tree.py  sort_by_mash_guide_tree.py  subcommands.py
scripts/: poasta_extract_genes.py  poasta_make_dataset.py  sort_by_mash_guide_tree.py
src/: bench.rs  dataset.rs  errors.rs  jobs.rs  main.rs  worker.rs
