[package]
name = "poa-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["clock"] }
clap = { version = "4.3.19", features = ["derive"] }
wait4 = "0.1.3"
poasta = { path = "../poasta" }
spoa_rs = { path = "../spoa-rs" }
toml = "0.7.6"
serde = { version = "1.0.176", features = ["derive"] }
walkdir = "2.3.3"
anyhow = "1.0.72"
