[package]
name = "poa-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["clock", "serde"] }
clap = { version = "4.3.19", features = ["derive"] }
wait4 = "0.1.3"
poasta = { path = "../poasta" }
spoa_rs = { git = "https://github.com/broadinstitute/spoa-rs" }
toml = "0.7.6"
serde = { version = "1.0.176", features = ["derive"] }
walkdir = "2.3.3"
anyhow = "1.0.72"
rayon = "1.7.0"
core_affinity = "0.8.0"
noodles = { version = "0.46.0", features = ["fasta"] }
flate2 = "1.0.26"
libc = "0.2.147"
serde_json = "1.0.104"
csv = "1.2.2"
