[package]
name = "poa-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock", "serde"] }
clap = { version = "4.4.8", features = ["derive"] }
wait4 = "0.1.3"
poasta = { path = "../poasta" }
spoa_rs = { git = "https://github.com/broadinstitute/spoa-rs" }
#spoa_rs = { path = "../spoa-rs" }  # Non-SIMD version of SPOA
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
walkdir = "2.4.0"
anyhow = "1.0.75"
rayon = "1.7.0"
core_affinity = "0.8.0"
noodles = { version = "0.59.0", features = ["fasta"] }
flate2 = "1.0.26"
libc = "0.2.150"
serde_json = "1.0.108"
csv = "1.3.0"
abpoa-rs = "0.2.0"
