[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "poa_bench_tools"
version = "0.1"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-bio",
    "pysam",
    "tqdm",
]

[project.scripts]
poa-bench-tools = "poa_bench_tools.__main__:main"

[project.entry-points."poa_bench_tools.subcommands"]
mutate = "poa_bench_tools.create_mutated_sequences:MutateSeq"
make_synthetic_data = "poa_bench_tools.make_synthetic_datasets:MakeSyntheticData"
extract_genes = "poa_bench_tools.extract_genes:ExtractGenes"
make_gene_data = "poa_bench_tools.make_gene_dataset:MakeGeneData"
sort_fasta = "poa_bench_tools.sort_by_guide_tree:SortFasta"

[tool.setuptools.packages]
find = {}
